--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.15</version> <!-- or latest stable version -->
+    </dependency>
+
     </dependencies>
 
     <build>
