--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     </properties>
 
     <dependencies>
+    <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <scope>test</scope>
+</dependency>
 
     <!-- Spring Web -->
     <dependency>
