--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
     </dependencies>
 
     <build>
+    <plugins>
         <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
@@ -107,6 +108,7 @@
         </annotationProcessorPaths>
     </configuration>
 </plugin>
+    </plugins>
 
     </build>
 
