--- a/pom.xml
+++ b/pom.xml
@@ -90,28 +90,25 @@
 
     </dependencies>
 
-    <build>
-        <plugins>
+  <build>
+    <plugins>
 
-            <!-- Force Java 17 for main + tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <testSource>17</testSource>
-                    <testTarget>17</testTarget>
-                </configuration>
-            </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+                <release>17</release>
+            </configuration>
+        </plugin>
 
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
 
-        </plugins>
-    </build>
+    </plugins>
+</build>
+
 
 </project>
